# llmguard-cli

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: publish.yml
src/: __init__.py  ai_guard.py  detector.py
tests/: test_cli.py
